fixed issues on mobile devices

--- a/assets/less/components/_tiles.less
+++ b/assets/less/components/_tiles.less
@@ -11,7 +11,6 @@
         @media (min-width: @screen-md-min){
             display: table;
             width: 100%;
-            //table-layout: fixed;
         }
 
         .item{
@@ -57,6 +56,7 @@
                 z-index: 2;
                 padding: 10px;
                 opacity: 0;
+                overflow: hidden;
 
                 @media (min-width: @screen-sm-min){
                     padding: 10px;
