--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -12,15 +12,25 @@
         top: 100%;
         left: 0;
         width: 100%;
+        background-color: #fff;
         background-image: url("../img/bg/noise.png");
+
+        &:hover,
+        &:focus{
+            background-color: #fff;
+        }
 
         .brand-name{
             display: block;
             margin-top: 0;
             margin-bottom: 11px;
-            font-size: 41px;
+            font-size: 28px;
             font-weight: normal;
             line-height: 1.1;
+
+            @media (min-width: @screen-sm-min){
+                font-size: 41px;
+            }
         }
         .brand-description{
             margin-bottom: 0;
@@ -46,7 +56,7 @@
 
             .navbar-text,
             > a{
-                padding: 10px 15px;
+                padding: 3px 6px;
 
                 @media (min-width: @screen-sm-min){
                     padding: 14px 15px;
@@ -179,41 +189,52 @@
     margin-bottom: 3px;
 
     @media (max-width: @screen-xs-max){
-        margin: 0 400px 0 0;
-        display: block;
+        padding-left: 6px;
+        padding-right: 6px;
+        margin: 0;
     }
 
     .form-group{
-        position: relative;
         margin-bottom: 0;
+        position: relative;
 
-        .form-control{
-            background-color: transparent;
-            opacity: 0;
-            width: 0;
-            display: block;
-            position: relative;
-            z-index: 1;
-            padding-right: 15px;
-            cursor: pointer;
+        input{
 
-            .transition(all .2s ease);
+            @media (max-width: @screen-xs-max){
+                display: inline-block;
+                width: auto;
+            }
 
-            &:focus{
-                padding-right: 30px;
-                opacity: 1;
-                width: 200px;
-                cursor: text;
+            @media (min-width: @screen-sm-min){
+                padding-right: 15px;
+                cursor: pointer;
+                opacity: 0;
+                width: 0;
+                background-color: transparent;
+
+                .transition(all .2s ease);
+
+                &:focus{
+                    padding-right: 30px;
+                    opacity: 1;
+                    width: 200px;
+                    cursor: text;
+                }
             }
         }
-        .btn{
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            border: 0 none;
-            padding: 0;
-            margin: 1px;
+        label{
+            margin-bottom: 0;
+
+            @media (min-width: @screen-sm-min){
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                border: 0 none;
+                padding: 0;
+                margin: 1px;
+                line-height: 32px;
+            }
             color: @brand-primary;
         }
     }
