--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -87,7 +87,7 @@ body.home{
 
 #home-slider{
     @media (max-width: @screen-xs-max){
-        height: auto !important;
+        height: 280px !important;
     }
     .carousel-inner{
         height: 100%;
